--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" type=text/css href="{{url_for('static',filename='css/indexstyle.css')}}">
-  <link rel=" icon" href="static/images/fake.png">
+  <link rel="icon" type="image/x-icon" href="static/images/fake.png">
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/d2747108de.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="{{url_for('static',filename='js/index.js')}}"></script>
