--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" type=text/css href="{{url_for('static',filename='css/indexstyle.css')}}">
-  <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico">
+  <!-- <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico"> -->
   <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}"> -->
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/d2747108de.js" crossorigin="anonymous"></script>
