ref: removing favicon from app.js

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
   <!-- <link rel="shortcut icon" type="image/x-icon" href="static/images/favicon.ico"> -->
   <!-- <link rel="shortcut icon" href="{{ url_for('static', filename='images/favicon.ico') }}"> -->
   <!-- Font Awesome -->
+  <link rel="icon" href="static/images/favicon.ico">
   <script src="https://kit.fontawesome.com/d2747108de.js" crossorigin="anonymous"></script>
   <script type="text/javascript" src="{{url_for('static',filename='js/index.js')}}"></script>
   <script>
