--- a/templates/index.html
+++ b/templates/index.html
@@ -6,8 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <link rel="stylesheet" type=text/css href="{{url_for('static',filename='css/indexstyle.css')}}">
-  <link rel="icon" href="/static/favicon.ico">
-  <!-- <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}"> -->
+  <link rel="shortcut icon" href="/static/images/fake.png" />
   <!-- Font Awesome -->
   <!-- <link rel="icon" href="static/images/favicon.ico"> -->
   <script src="https://kit.fontawesome.com/d2747108de.js" crossorigin="anonymous"></script>
